test/error/if_branch.ss
if 1 3 "hello"
# -> type error
